--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,7 @@
 $background: #fff;
 $color: #202124;
-$border: #f8f9fa;
-$border_hover: #202124;
+$border_light: #f8f9fa;
+$border_dark: #202124;
 $bttn_color: #f8f9fa;
 $font: arial,sans-serif;
 
@@ -11,11 +11,11 @@ $font: arial,sans-serif;
     font-size: 14px;
     padding: 10px 16px;
     border-radius: 4px;
-    border: 1px solid $border;
+    border: 1px solid $border_light;
 }
 
 .gray_bttn:hover {
-    border: 1px solid $border_hover;
+    border: 1px solid $border_dark;
 }
 
 
@@ -32,12 +32,18 @@ h1 {
     font-family: $font;
 }
 
-.goglefy {
+.searchbar {
     line-height: 20px;
     width: 300px;
-    border: 1px solid $border_hover;
+    border: 1px solid $border_dark;
     font-size: 14px;
     border-radius: 20px;
     padding: 10px 16px;
+}
+
+.header_nav {
+    text-align: right;
+    font-family: $font;
+    font-size: small;
 
 }
