--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,66 @@
+body {
+  color: #202124;
+  background-color: #fff;
+  font-family: arial, sans-serif;
+  font-size: 14px; }
+
+.flex-container {
+  display: flex;
+  position: absolute;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  justify-content: center; }
+
+h1 {
+  text-align: center;
+  font-size: xx-large; }
+
+.searchbar {
+  line-height: 20px;
+  width: 300px;
+  border: 1px solid #202124;
+  border-radius: 20px;
+  padding: 10px 16px; }
+
+.header_nav {
+  text-align: right;
+  padding: 30px;
+  color: #202124; }
+
+.advanced {
+  text-align: left;
+  table-layout: auto;
+  border-bottom: 1px solid #202124; }
+
+.advanced tr {
+  line-height: 50px; }
+
+.advanced input {
+  line-height: 30px;
+  width: 600px;
+  border: 1px solid #202124; }
+
+.advanced .t {
+  width: 250px; }
+
+.blue_bttn {
+  background-color: #4d90fe;
+  color: white;
+  padding: 10px 16px;
+  border-radius: 4px;
+  border: 1px solid #f8f9fa; }
+
+.blue_bttn:hover {
+  border: 2px solid #202124; }
+
 .gray_bttn {
   background-color: #f8f9fa;
-  font-family: arial, sans-serif;
-  font-size: 14px;
   padding: 10px 16px;
   border-radius: 4px;
   border: 1px solid #f8f9fa; }
 
 .gray_bttn:hover {
   border: 1px solid #202124; }
-
-.flex-container {
-  display: flex;
-  justify-content: center;
-  padding: 30px; }
-
-h1 {
-  text-align: center;
-  font-size: xx-large;
-  font-family: arial, sans-serif; }
-
-.searchbar {
-  line-height: 20px;
-  width: 300px;
-  border: 1px solid #202124;
-  font-size: 14px;
-  border-radius: 20px;
-  padding: 10px 16px; }
-
-.header_nav {
-  text-align: right;
-  font-family: arial, sans-serif;
-  font-size: small; }
 
 /*# sourceMappingURL=styles.css.map */
