--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,21 @@
+.header_nav {
+  text-align: right;
+  padding: 30px;
+  color: #202124; }
+
+.header_nav a {
+  color: #202124;
+  text-decoration: none;
+  padding: 10px; }
+
+.header_nav a:hover {
+  text-decoration: underline; }
+
 body {
   color: #202124;
   background-color: #fff;
   font-family: arial, sans-serif;
-  font-size: 14px; }
+  font-size: medium; }
 
 .flex-container {
   display: flex;
@@ -16,33 +29,24 @@ h1 {
   text-align: center;
   font-size: xx-large; }
 
+.search_decorations {
+  writing-mode: horizontal-tb;
+  width: 500px;
+  height: 40px;
+  border-radius: 20px;
+  border: 1px solid #202124;
+  text-align: left;
+  padding-left: 5px; }
+
+.search_decorations:hover {
+  box-shadow: 2px 2px 4px gray, -2px -2px 4px gray; }
+
 .searchbar {
   line-height: 20px;
-  width: 300px;
-  border: 1px solid #202124;
-  border-radius: 20px;
-  padding: 10px 16px; }
-
-.header_nav {
-  text-align: right;
-  padding: 30px;
-  color: #202124; }
-
-.advanced {
-  text-align: left;
-  table-layout: auto;
-  border-bottom: 1px solid #202124; }
-
-.advanced tr {
-  line-height: 50px; }
-
-.advanced input {
-  line-height: 30px;
-  width: 600px;
-  border: 1px solid #202124; }
-
-.advanced .t {
-  width: 250px; }
+  width: 400px;
+  border: none;
+  padding: 10px 16px;
+  outline: none; }
 
 .blue_bttn {
   background-color: #4d90fe;
@@ -62,5 +66,21 @@ h1 {
 
 .gray_bttn:hover {
   border: 1px solid #202124; }
+
+.advanced {
+  text-align: left;
+  table-layout: auto;
+  border-bottom: 1px solid #202124; }
+
+.advanced tr {
+  line-height: 50px; }
+
+.advanced input {
+  line-height: 30px;
+  width: 600px;
+  border: 1px solid #202124; }
+
+.advanced .t {
+  width: 250px; }
 
 /*# sourceMappingURL=styles.css.map */
