--- a/styles.scss
+++ b/styles.scss
@@ -9,14 +9,31 @@ $light_text: white;
 // regular gray one
 $border_light: #f8f9fa;
 $border_dark: #202124;
+$border_shadow: gray;
 $light_bttn: #f8f9fa;
 $blue_bttn: #4d90fe;
+
+.header_nav {
+    text-align: right;
+    padding: 30px;
+    color: $color;
+}
+
+.header_nav a {
+    color: $color;
+    text-decoration: none;
+    padding: 10px;
+}
+
+.header_nav a:hover {
+    text-decoration: underline;
+}
 
 body {
     color: $color;
     background-color: $background;
     font-family: $font;
-    font-size: 14px;
+    font-size: medium;
 }
 
 .flex-container {
@@ -28,47 +45,33 @@ body {
     justify-content: center;
 }
 
-
 h1 {
     text-align: center;
     font-size: xx-large;
 }
 
+.search_decorations {
+    writing-mode: horizontal-tb;
+    width: 500px;
+    height: 40px;
+    border-radius: 20px;
+    border: 1px solid $border_dark;
+    text-align: left;
+    padding-left: 5px;
+}
+
+.search_decorations:hover {
+    box-shadow: 2px 2px 4px $border_shadow, -2px -2px 4px $border_shadow;
+
+}
+
 .searchbar {
     line-height: 20px;
-    width: 300px;
-    border: 1px solid $border_dark;
-    border-radius: 20px;
+    width: 400px;
+    border: none;
     padding: 10px 16px;
+    outline: none;
 }
-
-.header_nav {
-    text-align: right;
-    padding: 30px;
-    color: $color;
-
-}
-
-.advanced {
-    text-align: left;
-    table-layout: auto;
-    border-bottom: 1px solid $border_dark;
-}
-
-.advanced tr {
-    line-height: 50px;
-}
-
-.advanced input {
-    line-height: 30px;
-    width: 600px;
-    border: 1px solid $border_dark;
-}
-
-.advanced .t {
-    width: 250px;
-}
-
 
 .blue_bttn {
     background-color: $blue_bttn;
@@ -91,4 +94,24 @@ h1 {
 
 .gray_bttn:hover {
     border: 1px solid $border_dark;
+}
+
+.advanced {
+    text-align: left;
+    table-layout: auto;
+    border-bottom: 1px solid $border_dark;
+}
+
+.advanced tr {
+    line-height: 50px;
+}
+
+.advanced input {
+    line-height: 30px;
+    width: 600px;
+    border: 1px solid $border_dark;
+}
+
+.advanced .t {
+    width: 250px;
 }
