forgin key set to current user now works

--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -10,7 +10,7 @@
                     <img scr="{{ item.image }}" alt="{{ item.title }}" width="100" hight="100"> 
                 </td>
                 <td> 
-                    <h3>{{ item.title }}</h3>
+                    <a href="{% url 'listing' item.id %}"> <h3>{{ item.title }}</h3> </a>
                     <h6> Price: ${{ item.starting_bid }}</h6>
                     <h6>Sold by: {{ item.seller }}</h6>
                     <p> {{ item.description }}</p>
