watch related funktions in model, added cadegory

--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -15,7 +15,7 @@
                     {% else %}
                     <h3>{{ item.title }}</h3> 
                     {% endif %}
-                    <h6> Price: ${{ item.starting_bid }}</h6>
+                    <h6> Price: ${{ item.price }}</h6>
                     <p> {{ item.description }}</p>
                     <p> {{ item.date_created }} </p>
                 </td>
