--- a/commerce/auctions/templates/auctions/create.html
+++ b/commerce/auctions/templates/auctions/create.html
@@ -3,9 +3,15 @@
 {% block title %} Create {% endblock %}
 
 {% block body %}
-<form action="{% url 'create' %}" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit">
-</form>
+    {% if user.is_authenticated %}
+    <div class="form-group">
+        <form action="{% url 'create' %}" method="post">
+            {% csrf_token %}
+            {{ form }}
+            <button type="submit" class="btn btn-primary">Create</button>
+        </form>
+    </div>
+    {% else %}
+        <h1>Login required</h1>
+    {% endif %}
 {% endblock %} 
