--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -2,25 +2,17 @@
 
 {% block body %}
     <h2>Active Listings</h2>
-    <table>
-        <tbody>
-            {% for item in items %}
-            <tr> 
-                <td>
-                    <img scr="{{ item.image }}" alt="{{ item.title }}" width="100" hight="100"> 
-                </td>
-                <td> 
-                    {% if user.is_authenticated %}
-                    <a href="{% url 'listing' item.pk %}"> <h3>{{ item.title }}</h3> </a>
-                    {% else %}
-                    <h3>{{ item.title }}</h3> 
-                    {% endif %}
-                    <h6> Price: ${{ item.price }}</h6>
-                    <p> {{ item.description }}</p>
-                    <p> {{ item.date_created }} </p>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <div class="row mx-3">
+        {% for item in items %}
+            <div class="card" style="width: 18rem;">
+                <img src="{{ item.image }}" class="card-img-top" alt="{{ item.title }}">
+                <div class="card-body">
+                    <h5 class="card-title">{{ item.title }}</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondaty">${{ item.price }}</h6>
+                    <p class="card-text">{{ item.description }}</p>
+                    <a href="{% url 'listing' item.pk %}" class="btn btn-primary btn-sm"> Detalies </a>
+                </div>
+                </div>
+        {% endfor %}
+    </div>
 {% endblock %}
