--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -4,24 +4,26 @@
 
 {% block body %}
 <div>
-    <div>
-        <h1> {{ path }}</h1>
-        <form action="{% url 'listing' item.pk %}", method="post">
-            {% csrf_token %}
-            <input type="hidden" name="watch_form">
-            {% if watching %}
-            <button type="submit", name="item_id", value="{{ item.id }}", class=" btn btn-danger btn-sm">Watching</button>
-            {% else %}
-            <button type="submit", name="item_id", value="{{ item.id }}", class=" btn btn-primary btn-sm">Watch</button>
-            {% endif %}
-        </form>
-    </div>
-    <div> <img scr="{{ item.image }}" alt="{{ item.title }}"></div>
-    <div> 
-        <h1> {{ item.title }}</h1>
-        <h3> {{ item.description }}</h3>
-    </div>
 </div>
+    <div class="card" style="width: 30rem;">
+        <div>
+            <form action="{% url 'listing' item.pk %}", method="post">
+                {% csrf_token %}
+                <input type="hidden" name="watch_form">
+                {% if watching %}
+                <button type="submit", name="item_id", value="{{ item.id }}", class=" btn btn-danger btn-sm">Watching</button>
+                {% else %}
+                <button type="submit", name="item_id", value="{{ item.id }}", class=" btn btn-primary btn-sm">Watch</button>
+                {% endif %}
+            </form>
+        </div>
+        <img src="{{ item.image }}" class="card-img-top" alt="{{ item.title }}">
+        <div class="card-body">
+            <h5 class="card-title">{{ item.title }}</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondaty">${{ item.price }}</h6>
+            <p class="card-text">{{ item.description }}</p>
+        </div>
+    </div>
 <div>
     <div class="show_comments">
         <ul>
@@ -31,13 +33,14 @@
         <li> No comments </li>
         {% endfor %}
     </div>
-    <div>
+    <div class="form-group">
         <form action="{% url 'listing' item.pk %}", method="post">
             <input type="hidden" name="comment_form"> 
             {% csrf_token %}
             {{ new_comment }}
-            <input type="submit" class="btn-primary" value="comment">
+            <button type="submit" class="btn btn-primary">Post</button>
         </form>
     </div>
 </div>
+
 {% endblock %}
