--- a/commerce/auctions/templates/auctions/watchlist.html
+++ b/commerce/auctions/templates/auctions/watchlist.html
@@ -7,6 +7,13 @@
 <div class="row mx-3">
     {% for item in items %}
         <div class="card" style="width: 18rem;">
+            <div>
+                <form action="{% url 'watchlist' %}", method="post">
+                    {% csrf_token %}
+                    <input type="hidden" name="watch_form">
+                    <button type="submit", name="item_id", value="{{ item.id }}", class=" btn btn-danger btn-sm">Watching</button>
+                </form>
+            </div>
             <img src="{{ item.image }}" class="card-img-top" alt="{{ item.title }}">
             <div class="card-body">
                 <h5 class="card-title">{{ item.title }}</h5>
