--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -26,11 +26,11 @@
     </div>
 <div>
     <div class="show_comments">
-        <ul>
+        <div>
         {% for comment in comments %}
-        <li> {{ comment }} </li>
+        <p> {{ comment }} </p>
         {% empty %}
-        <li> No comments </li>
+        <p> No comments </p>
         {% endfor %}
     </div>
     <div class="form-group">
