--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -20,8 +20,16 @@
         <img src="{{ item.image }}" class="card-img-top" alt="{{ item.title }}">
         <div class="card-body">
             <h5 class="card-title">{{ item.title }}</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondaty">${{ item.price }}</h6>
+            <h6 class="card-subtitle mb-2 text-body-secondaty">${{ item.seller }}</h6>
             <p class="card-text">{{ item.description }}</p>
+        </div>
+        <div class="form-group">
+            <form action="{% url 'listing' item.pk %}", method="post">
+                <input type="hidden" name="bid_form"> 
+                {% csrf_token %}
+                {{ new_bid }}
+                <button type="submit" class="btn btn-primary">Bid</button>
+            </form>
         </div>
     </div>
 <div>
