--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -3,64 +3,76 @@
 {% block title %} Listing {% endblock %}
 
 {% block body %}
-<div>
-</div>
-    <div class="card" style="width: 30rem;">
-        <div>
-            <form action="{% url 'listing' item.pk %}", method="post">
-                {% csrf_token %}
-                <input type="hidden" name="watch_form">
-                {% if watching %}
-                <button type="submit", name="item_id", value="{{ item.id }}", class=" btn btn-danger btn-sm">Watching</button>
-                {% else %}
-                <button type="submit", name="item_id", value="{{ item.id }}", class=" btn btn-primary btn-sm">Watch</button>
-                {% endif %}
-            </form>
-        </div>
-        <img src="{{ item.image }}" class="card-img-top" alt="{{ item.title }}">
-        <div class="card-body">
-            <h5 class="card-title">{{ item.title }}</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondaty">Listed by: {{ item.seller }}</h6>
-            <p class="card-text">{{ item.description }}</p>
-            <p class="card-text"> category: {%if item.category %}{{ item.category }} {% else %} no category listed {% endif %}</p>
-        </div>
-        <div class="show_bids">
-            <div>
-                {% if total_bids %}
-                {{ total_bids }} Bid(s)
-                {% endif %}
-                Highest bid is: ${{ highest_bid }}
-            </div>
-        </div>
-        <div class="form-group">
-            <form action="{% url 'listing' item.pk %}" method="post">
-                <input type="hidden" name="bid_form"> 
-                {% csrf_token %}
-                {% if message %}
-                <h3 class="danger">{{ message }}</h3> 
-                {% endif %}
-                {{ new_bid }}
-                <button type="submit" class="btn btn-primary">Bid</button>
-            </form>
-        </div>
+<div class="card" style="width: 30rem;">
+    <div class="watchlist-btn">
+        <form action="{% url 'listing' item.pk %}", method="post">
+            {% csrf_token %}
+            <input type="hidden" name="watch_form">
+            {% if watching %}
+            <button type="submit", name="item_id", value="{{ item.id }}", class=" btn btn-danger btn-sm">Watching</button>
+            {% else %}
+            <button type="submit", name="item_id", value="{{ item.id }}", class=" btn btn-primary btn-sm">Watch</button>
+            {% endif %}
+        </form>
     </div>
-<div>
-    <div class="show_comments">
+    <h2 class="card-title">Listing: {{ item.title }}</h2>
+    <img src="{{ item.image }}" class="card-img-top" alt="{{ item.title }}">
+    <div class="card-body">
+        <p class="card-text">{{ item.description }}</p>
+        <br>
+        <h5 class="card-subtitle mb-2 text-body-secondaty">details: </h5>
+        <p class="card-text">listed by: {{ item.seller }}</p>
+        <p class="card-text">category: {%if item.category %}{{ item.category }} {% else %} no category listed {% endif %}</p>
+    </div>
+</div>
+<div class="card" style="width: 30rem;">
+    <div class="show_bids">
         <div>
-        {% for comment in comments %}
-        <p> {{ comment }} </p>
-        {% empty %}
-        <p> No comments </p>
-        {% endfor %}
+            {% if total_bids %}
+            {{ total_bids }} bid(s)
+            {% endif %}
+            {% if item.current_bid %}
+                The current bid is: ${{ item.current_bid }}
+            {% else %}
+                The starting price is: ${{ item.starting_price }}
+            {% endif %}
+        </div>
     </div>
     <div class="form-group">
         <form action="{% url 'listing' item.pk %}" method="post">
-            <input type="hidden" name="comment_form"> 
+            <input type="hidden" name="bid_form"> 
             {% csrf_token %}
-            {{ new_comment }}
-            <button type="submit" class="btn btn-primary">Post</button>
+            {% if message %}
+            <h3 class="danger">{{ message }}                 
+                {% if item.current_bid %}
+                ${{ item.current_bid }}
+            {% else %}
+                ${{ item.starting_price }}
+            {% endif %}</h3> 
+            {% endif %}
+            {{ new_bid }}
+            <button type="submit" class="btn btn-primary">Bid</button>
         </form>
     </div>
+</div>
+<div>
+    <div class="card" style="width: 30rem;">
+        <ul class="list-group list-group-flush">
+            {% for comment in comments %}
+            <li class="list-group-item">{{ comment.user }}: {{ comment.comment }}</li>
+            {% endfor %}
+            <li class="list-group-item">
+                <div class="form-group">
+                    <form action="{% url 'listing' item.pk %}" method="post">
+                        <input type="hidden" name="comment_form"> 
+                        {% csrf_token %}
+                        {{ new_comment }}
+                        <button type="submit" class="btn btn-primary">Post</button>
+                    </form>
+                </div>
+            </li>
+        </ul>
+      </div>
 </div>
 
 {% endblock %}
