--- a/commerce/auctions/templates/auctions/categories.html
+++ b/commerce/auctions/templates/auctions/categories.html
@@ -4,8 +4,7 @@
 
 {% block body %}
 {% for category in categories %}
-    <h1>{{ category }}</h1>
-    <p class="d-inline-flex gap-1">
+    <p class="d-inline-flex">
         <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#{{ category }}" aria-expanded="false" aria-controls="{{ category }}">
           {{ category }}
         </button>
@@ -13,14 +12,27 @@
       <div class="collapse" id="{{ category }}">
         <div class="category-view">
           {% for item in items %}
-              {% if item.category == category %}
-              <a class="all-card-link" href="{% url 'listing' item.pk %}">
-                <div class="card" style="width: 8rem;">
-                  <h5 class="card-titel">{{ item.title }}</h5>
-                  <img src="{{ item.image }}" class="card-img-top" alt="{{ item.title }}">
-                  <div class="card-body">
-                  <p class="card-text">{{ item.description }}</p>
-                  </div>
+              {% if item.category == category and item.is_active %}
+              <a class="full-card-link" href="{% url 'listing' item.pk %}">
+                <div class="card mb-3 fulllink" style="max-width: 900px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                        <img src="{{ item.image }}" class="img-fluid rounded-start" alt="{{ item.title }}">
+                        </div>
+                        <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ item.title }}</h5>
+                            <h6 class="card-subtitle">Price: ${% if item.current_bid %}{{ item.current_bid }}{% else %}{{ item.starting_price }}{% endif %}</h6>
+                            <p class="card-text">{{ item.description }}</p>
+                            <p class="card-text"><small class="text-body-secondary">Created: {{ item.date_created.date }}</small></p>
+                            <form action="{% url 'watchlist' %}", method="post">
+                                {% csrf_token %}
+                                <input type="hidden" name="watch_form">
+                                <button type="submit", name="item_id", value="{{ item.id }}", class="btn btn-warning btn-sm">Remove from watchlist</button>
+                            </form>
+                        </div>
+                        </div>
+                    </div>
                 </div>
                 </a>
               {% endif %}
