--- a/commerce/auctions/templates/auctions/close.html
+++ b/commerce/auctions/templates/auctions/close.html
@@ -8,20 +8,18 @@
     {{ message }}
 </div>
 {% endif %}
+{% if user == item.seller and item.is_active %}
 <div class="card" style="width: 30rem;">
-    <img src="{{ item.image}}" class="card-img-top" alt="{{ item.title }}">
+  <h5 class="card-title">Listing: {{ item.title }}</h5> 
+  <img src="{{ item.image }}" class="card-img-top" alt="{{ item.title }}">
     <div class="card-body">
-      <h5 class="card-title">Listing: {{ item.title }}</h5>
-      <h6 class="card-subtitle mb-2 text-body-secondaty"> Detalies: </h6>
-      <p class="card-text"> there have been {{ total_bids }}bid(s) on your listing</p>
-      <p class="card-text"> the highest bid is: ${{ item.current_bid }} Made by: {{ item.buyer }}</p>
-      {% if user == item.seller and item.is_active %}
+      <p class="card-text">There has been <strong>{{ total_bids }}</strong> bid(s) </p>
+      <p class="card-text"> Highest bid: <strong>${{ item.current_bid }}</strong> by: {{ item.buyer }}</p>
       <form action="{% url 'close' item.id %}" method="post">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger"> close listing </button>
-      </form>
-      {% endif %}
     </div>
   </div>
-
+</form>
+{% endif %}
 {% endblock %}
