--- a/commerce/auctions/templates/auctions/create.html
+++ b/commerce/auctions/templates/auctions/create.html
@@ -3,15 +3,16 @@
 {% block title %} Create {% endblock %}
 
 {% block body %}
-    {% if user.is_authenticated %}
-    <div class="form-group">
         <form action="{% url 'create' %}" method="post">
             {% csrf_token %}
-            {{ form }}
+            {% for field in form %}
+            <div class="row mb-3">
+                <label class="col-sm-2 col-form-lable">{{ field.label }}</label>
+                <div class="col-sm-10">
+                    {{ field }}
+                </div>
+            </div>
+            {% endfor %}
             <button type="submit" class="btn btn-primary">Create</button>
         </form>
-    </div>
-    {% else %}
-        <h1>Login required</h1>
-    {% endif %}
 {% endblock %} 
